fix overlapping table (#10238)

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -96,6 +96,15 @@ table {
         display: block;
         overflow-x: auto;
     }
+
+    p {
+        word-break: break-word;
+
+        a,
+        code {
+            word-break: break-word;
+        }
+    }
 }
 
 table p:first-of-type {
